--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "main": "src/index.ts",
   "module": "es/index.js",
   "scripts": {
-    "dev": "storybook dev -p 6006",
+    "sdev": "storybook dev -p 6006",
     "sbuild": "storybook build",
     "build": "rimraf es && rollup -c",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
     "prettier": "prettier src --write",
     "lint": "eslint . --ext .js,.cjs,.mjs,.ts,.cts,.mts --fix --ignore-path .gitignore",
     "lint-staged": "lint-staged",
@@ -54,6 +56,9 @@
     "@storybook/react": "^7.6.10",
     "@storybook/react-webpack5": "^7.6.10",
     "@storybook/test": "^7.6.10",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.7",
     "@types/react": "^18.2.48",
@@ -72,6 +77,9 @@
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^9.0.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
@@ -82,6 +90,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "sass": "^1.70.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
   "browserslist": [
