chore: 搭建文档框架（未完成）

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,13 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
+      "@@/*": [".dumi/tmp/*"],
+      "yuqi-ui": ["src"],
+      "yuqi-ui/*": ["src/components/*", "*"],
     },
 
     /* Linting */
     "strict": true,
   },
-  "include": ["src"],
+  "include": [".dumirc.ts", "src/components/**/*"],
 }
