--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "main": "src/index.ts",
   "module": "es/index.js",
   "scripts": {
+    "start": "npm run dev",
     "sdev": "storybook dev -p 6006",
     "sbuild": "storybook build",
     "build": "rimraf es && rollup -c",
     "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test:watch": "jest --watch",
     "prettier": "prettier src --write",
     "lint": "eslint . --ext .js,.cjs,.mjs,.ts,.cts,.mts --fix --ignore-path .gitignore",
     "lint-staged": "lint-staged",
     "prepare": "npm run start:husky && npm run add:hook && npm run add:commit",
     "start:husky": "husky install",
     "add:hook": "npx husky add .husky/pre-commit \"npx lint-staged\"",
-    "add:commit": "npx husky add .husky/commit-msg \"npx --no -- commitlint --edit \"$1\"\""
+    "add:commit": "npx husky add .husky/commit-msg \"npx --no -- commitlint --edit \"$1\"\"",
+    "dev": "dumi dev",
+    "fbuild": "father build",
+    "build:watch": "father dev",
+    "docs:build": "dumi build",
+    "doctor": "father doctor",
+    "lint:css": "stylelint \"{src,test}/**/*.{css,less}\"",
+    "lint:es": "eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
+    "prepublishOnly": "father doctor && npm run build"
   },
   "keywords": [],
   "author": "XXX17",
@@ -65,8 +74,10 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "@umijs/lint": "^4.1.1",
     "autoprefixer": "^10.4.17",
     "commitlint": "^18.5.0",
+    "dumi": "^2.2.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -76,6 +87,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "father": "^4.4.0",
     "husky": "^9.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
@@ -90,6 +102,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "sass": "^1.70.0",
+    "stylelint": "^14.16.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
