chore: 搭建文档框架（完成）

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 node_modules
 es
-.dumi
+.dumi/tmp
+.dumi/tmp-test
+.dumi/tmp-production
+.dumi/preset/components-changelog*
+.dumi/preset/misc-changelog.json
