--- a/package.json
+++ b/package.json
@@ -32,16 +32,14 @@
   "author": "XXX17",
   "license": "ISC",
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "biome format --write",
     "*.{json,less,md}": "prettier --ignore-unknown --write"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "storybook": "^7.6.10"
   },
   "eslintConfig": {
@@ -65,7 +63,6 @@
     "@storybook/react": "^7.6.10",
     "@storybook/react-webpack5": "^7.6.10",
     "@storybook/test": "^7.6.10",
-    "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
     "@types/jsdom": "^21.1.6",
