--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "jsxFactory": "React.createElement",
     "jsxFragmentFactory": "React.Fragment",
     "baseUrl": ".",
+    "declaration": true,
+    "esModuleInterop": true,
     "paths": {
       "@/*": ["src/*"],
       "@@/*": [".dumi/tmp/*"],
