--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,5 +24,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
+          branch: gh-pages # 部署后提交到那个分支
           # 文档目录，如果是 react 模板需要修改为 docs-dist
           publish_dir: ./docs-dist
